fix getVisibleContacts

--- a/src/components/Phonebook/FormFindContact/FormFindContact.module.css
+++ b/src/components/Phonebook/FormFindContact/FormFindContact.module.css
@@ -5,9 +5,10 @@
     display: flex;
     flex-direction: column;
     font-weight: 700;
+    color: black;
 }
 .input {
     width: 60%;
     padding: 3px;
-    border: 1px color gray;
+    border: 2px solid gray;
 }
